# functionalbadges-max

./: .gitignore  CMakeLists.txt  Functions.h  LICENSE  README.md  build_project.sh  data.h  functions.h  install_dependencies.sh  macro.h  main.cpp  reader_main.cpp  timing.h  web.h  writer_main.cpp
misc/: Ideas.md
